fix: fix responsive on smaller screen size

--- a/src/pages/Profile/ProfileDetails/ProfileCategorySpent/ProfileCategorySpent.module.scss
+++ b/src/pages/Profile/ProfileDetails/ProfileCategorySpent/ProfileCategorySpent.module.scss
@@ -8,6 +8,7 @@
     .cont-header {
       font-size: 1.6rem;
       font-family: $primary-font;
+      color: #333333;
     }
 
     .cont-para {
