--- a/src/pages/Profile/ProfileDetails/ProfileDetails.module.scss
+++ b/src/pages/Profile/ProfileDetails/ProfileDetails.module.scss
@@ -4,7 +4,6 @@
   margin-top: 4.4rem;
   margin-left: 52px;
   width: 100%;
-  // background-color: bisque;
 
   .section-name {
     font-family: $primary-font;
@@ -14,7 +13,7 @@
   .details-section {
     display: flex;
     justify-content: space-between;
-    // background-color: aqua;
+    flex-wrap: wrap;
 
     .details-right-section {
       width: 400px;
@@ -24,23 +23,61 @@
       display: flex;
       flex-direction: column;
       gap: 2.3rem;
-      height: 100vh;
       margin-top: 2rem;
-  
+
       .details-top-bar,
       .details-lower-bar {
-        // max-width: 60%;
-        //   background-color: red;
         display: flex;
-        justify-content: space-between;
         gap: 2.3rem;
-  
+        flex-wrap: wrap;
+
         .profile-image__cont,
         .profile-category__cont,
         .order-tracking__cont,
         .profile-diagram__cont {
           width: 300px;
           height: 360px;
+        }
+      }
+    }
+  }
+}
+
+@media only screen and (max-width: 1200px) {
+  .details-left-section {
+    width: 80%;
+  }
+
+  .details-top-bar,
+  .details-lower-bar {
+    width: 100%;
+    justify-content: space-between;
+  }
+}
+
+@media only screen and (max-width: 825px) {
+  .section {
+    margin-left: 0;
+    min-height: 100vh;
+
+    .section-name {
+      text-align: center;
+    }
+
+    .details-section {
+      display: block;
+
+      .details-right-section {
+        width: 100%;
+      }
+
+      .details-left-section {
+        width: 100%;
+
+        .details-top-bar,
+        .details-lower-bar {
+          flex-direction: column;
+          align-items: center;
         }
       }
     }
