--- a/src/pages/Profile/ProfileDetails/ProfileOrderTracking/OrderSlider.module.scss
+++ b/src/pages/Profile/ProfileDetails/ProfileOrderTracking/OrderSlider.module.scss
@@ -10,6 +10,7 @@
     font-size: 1rem;
     font-family: $secondary-font;
     text-align: center;
+    color: #333333;
   }
 
   .image-cont {
