--- a/src/pages/Profile/ProfileDetails/ProfileOrderTracking/ProfileOrderTracking.module.scss
+++ b/src/pages/Profile/ProfileDetails/ProfileOrderTracking/ProfileOrderTracking.module.scss
@@ -10,6 +10,7 @@
       font-size: 1.6rem;
       font-family: $primary-font;
       text-align: center;
+      color: #333333;
     }
   }
 }
